<resources>
    <string name="app_name">GeekHub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email2">Email:</string>
    <string name="id2">Id:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_task">Add Task</string>
    <string name="date_created">Date created:</string>
    <string name="task_text">Text:</string>
    <string name="date_limit">Date limit:</string>
    <string name="button_set">Set</string>
    <string name="time_limit">Time limit:</string>
    <string name="button_save">Save</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_tasks">Tasks</string>
    <string name="title_activity_nd">NDActivity</string>
    <string name="text_user_profile">Profile</string>
    <string name="followers">Followers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash_screen">GeekHub</string>
    <string name="splash_content">GeekHub</string>
    <string name="user_name">Usuari</string>
    <string name="gameName">Game Name</string>
    <string name="gameDescription">Game Description</string>
    <string name="gameCategories">Game Categories</string>
    <string name="text_games">Games</string>
    <string name="add_post">Add Post</string>
    <string name="ap_title">Title:</string>
    <string name="postDescription">Post Description</string>
    <string name="postFollowers"># Followers</string>

    <string name="user_username">Username</string>
    <string name="user_description">Description</string>

    <string name="created_posts">Created\nPosts</string>
    <string name="subscribed_posts">Subscribed\nPosts</string>
    <string name="subscribed_games">Subscribed\nGames</string>

    <string name="created_posts_oup">Posts created:</string>

    <string name="profile_settings">Profile settings</string>
    <string name="modify_profile">Modify profile</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>

    <string name="user_link_image">Link to profile\'s image</string>

    <string name="openchats">Open new chat</string>
    <string name="chats_open">Chats open</string>
    <string name="chats_closed">Chats closed</string>
    <string name="chat_close">Close chat</string>
    <string name="user_block">Block User</string>
    <string name="user_unblock">Unblock User</string>
    <string name="user_otherBlock">This user blocked you</string>
    <string name="chats">Chats</string>
    <string name="gallery_icon">Gallery</string>

</resources>
